buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
    }
}

plugins {
    id 'base'
    id 'maven-publish'
    id 'signing'
    id 'pl.allegro.tech.build.axion-release' version '1.21.1'
    id 'com.gradleup.nmcp.aggregation' version '1.4.4'
    id 'io.quarkus.extension' version '3.34.3' apply false
    id 'io.quarkus' version '3.34.3' apply false
}

scmVersion {
    tag {
        prefix = 'v'
        initialVersion { config, position -> '0.1.0' }
    }
    checks {
        uncommittedChanges = false
        aheadOfRemote = false
        // Disabled due to Gradle 9 + Quarkus configuration resolution issues
        // Quarkus creates special configurations that can't be safely resolved during release verification
        snapshotDependencies = false
    }
}

allprojects {
    group = 'ai.pipestream'
    version = rootProject.scmVersion.version
}

// Repositories for root project (needed for nmcp plugin's internal dependencies)
repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
}

nmcpAggregation {
    publishAllProjectsProbablyBreakingProjectIsolation()

    centralPortal {
        username = findProperty('mavenCentralUsername') ?: System.getenv('MAVEN_CENTRAL_USERNAME')
        password = findProperty('mavenCentralPassword') ?: System.getenv('MAVEN_CENTRAL_PASSWORD')
        publishingType = "AUTOMATIC"
        // Explicitly set baseUrl to use Maven Central Portal (not OSS)
        baseUrl = "https://central.sonatype.com/"
    }
}

subprojects {
    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            name = 'GitHubPackages'
            url = uri("https://maven.pkg.github.com/${System.getenv('GITHUB_REPOSITORY') ?: 'ai-pipestream/quarkus-grpc-gatherer'}")
            credentials {
                username = findProperty('gpr.user') ?: System.getenv('GITHUB_ACTOR')
                password = findProperty('gpr.key') ?: System.getenv('GITHUB_TOKEN')
            }
        }
    }

    if (project.name != 'integration-tests') {
        apply plugin: 'java-library'

        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
            withSourcesJar()
            withJavadocJar()
        }

        // Maven Central rejects any release whose POM references a SNAPSHOT
        // dependency, so we have to enforce that on every publishable module
        // before invoking the release flow. axion-release's own
        // snapshotDependencies check is broken under Gradle 9 + Quarkus
        // because it iterates every project's every configuration including
        // Quarkus internal Copy configurations that throw "Resolution of the
        // configuration ... was attempted without an exclusive lock". This
        // task only walks compileClasspath and runtimeClasspath of THIS
        // module - the only thing that matters for a Maven Central upload.
        // CI must run :verifyNoSnapshotDeps on every publishable subproject
        // (and the gradle-plugin composite build) before kicking off the
        // release.
        tasks.register('verifyNoSnapshotDeps') {
            group = 'verification'
            description = 'Fails the build if compile/runtime classpaths contain any external -SNAPSHOT module versions.'
            doLast {
                List<String> violations = []
                ['compileClasspath', 'runtimeClasspath'].each { configName ->
                    Configuration config = configurations.findByName(configName)
                    if (config == null || !config.canBeResolved) {
                        return
                    }
                    config.incoming.resolutionResult.allDependencies.each { dep ->
                        // Project-internal sibling dependencies resolve to the
                        // current build's version, which is a SNAPSHOT during
                        // development, but they get substituted at publish time
                        // and never end up in the final POM as SNAPSHOTs. Only
                        // external module coordinates can poison a release.
                        if (!(dep.requested instanceof org.gradle.api.artifacts.component.ModuleComponentSelector)) {
                            return
                        }
                        if (!(dep.selected.id instanceof org.gradle.api.artifacts.component.ModuleComponentIdentifier)) {
                            return
                        }
                        String version = dep.selected.id.version
                        if (version.endsWith('-SNAPSHOT')) {
                            violations << "${project.name}:${configName} -> ${dep.selected.id}"
                        }
                    }
                }
                if (!violations.isEmpty()) {
                    throw new GradleException(
                            "Snapshot dependencies are not allowed for releases (Maven Central rejects them):\n  "
                                    + violations.join('\n  '))
                }
            }
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
        }

        tasks.withType(JavaCompile).configureEach {
            doFirst {
                // Quarkus ExtensionAnnotationProcessor requires a pom.xml to generate documentation.
                // It searches 3 levels above StandardLocation.CLASS_OUTPUT.
                // In standard Gradle layout, this is usually:
                // build/classes/java/main/ -> build/classes/java/ -> build/classes/
                // So we place a minimal pom.xml there.
                def pomDir = file("${buildDir}/classes")
                if (!pomDir.exists()) {
                    pomDir.mkdirs()
                }
                new File(pomDir, "pom.xml").text = """<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>${project.group}</groupId>
    <artifactId>${project.name}</artifactId>
    <version>${project.version}</version>
    <name>${project.name}</name>
</project>
"""
            }
        }

        publishing {
            repositories {
                mavenLocal()
                // GitHub Packages
                maven {
                    name = 'GitHubPackages'
                    url = uri("https://maven.pkg.github.com/${System.getenv('GITHUB_REPOSITORY') ?: 'ai-pipestream/quarkus-grpc-gatherer'}")
                    credentials {
                        username = findProperty('gpr.user') ?: System.getenv('GITHUB_ACTOR')
                        password = findProperty('gpr.key') ?: System.getenv('GITHUB_TOKEN')
                    }
                }
            }

            publications {
                create('maven', MavenPublication) {
                    from components.java

                    pom {
                        name = "quarkus-grpc-gatherer (${project.name})"
                        description = 'Quarkus extension that gathers protobuf sources before grpc-zero code generation'
                        url = 'https://github.com/ai-pipestream/quarkus-grpc-gatherer'
                        licenses {
                            license {
                                name = 'MIT License'
                                url = 'https://opensource.org/licenses/MIT'
                            }
                        }
                        developers {
                            developer {
                                id = 'krickert'
                                name = 'Kristian Rickert'
                            }
                        }
                        scm {
                            connection = 'scm:git:https://github.com/ai-pipestream/quarkus-grpc-gatherer.git'
                            developerConnection = 'scm:git:ssh://git@github.com/ai-pipestream/quarkus-grpc-gatherer.git'
                            url = 'https://github.com/ai-pipestream/quarkus-grpc-gatherer'
                        }
                    }
                }
            }
        }
    }

    signing {
        def signingKey = System.getenv("GPG_PRIVATE_KEY")
        def signingPassword = System.getenv("GPG_PASSPHRASE")

        // Only sign if keys are present (e.g. CI/Release)
        required { signingKey != null }

        if (signingKey && signingPassword) {
            useInMemoryPgpKeys(signingKey, signingPassword)
            sign publishing.publications
        }
    }
}

// Aggregator task: runs verifyNoSnapshotDeps on every publishable subproject
// PLUS the gradle-plugin composite-included build. CI invokes this single
// task before createRelease so a release attempt fails fast if any module
// would put a SNAPSHOT version into a published POM.
tasks.register('verifyAllNoSnapshotDeps') {
    group = 'verification'
    description = 'Runs verifyNoSnapshotDeps on every publishable module and on the gradle-plugin composite build.'
    dependsOn subprojects.findAll { it.name != 'integration-tests' }
            .collect { ":${it.name}:verifyNoSnapshotDeps" }
    dependsOn gradle.includedBuild('gradle-plugin').task(':verifyNoSnapshotDeps')
}
